# lin_algebra

./: CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: convert.rs  gf2_matrix.rs  int_gf2_matrix.rs  lib.rs  matrix.rs  packed_gf2_matrix.rs
src/vector_space/: gf2_vector_space.rs  mod.rs  vector_space.rs
