[package]
name = "lin_algebra"
version = "0.3.0"
edition = "2021"
authors = ["LucaBonamino"]
description = "A linear algebra package to compute image, kernel and rank of linear applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/LucaBonamino/lin_algebra"
homepage = "https://github.com/LucaBonamino/lin_algebra"
categories = ["mathematics", "cryptography"]
keywords = ["linear-applications", "rank", "image", "kernel", "echelon-form"]

[dependencies]
num-traits = "0.2"